--- a/index.html
+++ b/index.html
@@ -3,8 +3,54 @@
   <head>
     <meta charset="utf-8">
     <title>My website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>First beginning</h1>
+
+    <div class="container">
+      <!-- <div>Navigation bar</div> -->
+      <header>
+        <h1>Daniele Nocito developer portfolio</h1>
+        <div>
+          <img class="logo" src="./img/logo.code.png" alt="logo">
+        </div>
+      </header>
+
+
+      <div class="content">
+        <section class="main-photo">
+          <img class="work_in_progress" src="./img/work_in_progress_1600_c.jpg" alt="Work in progress">
+        </section>
+
+        <section class="main-photo">
+          <!-- <img src="./images/illustration-mockups.svg" alt="mockups"> -->
+        </section>
+
+        <section class="info-and-contacts">
+          <!-- <h1>Build The Community Your Fans Will Love</h1>
+
+          <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+          Create connections with your users as you engage in genuine discussion.</p>
+
+
+
+          <button type="button" name="button">Register</button> -->
+        </section>
+
+      </div>
+
+      <footer>
+      <!-- <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Daniele</a>.
+      </p> -->
+      <!-- <div class="social">
+        <img src="images/iconfinder_instagram_online_social_media_734394.png" alt="">
+        <img src="images/iconfinder_online_social_media_facebook_734386.png" alt="">
+        <img src="images/iconfinder_twitter_online_social_media_734367.png" alt="">
+      </div> -->
+      </footer>
+
+    </div>
   </body>
 </html>
