Projects device switch corrected

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <section id="skills">
           <h2>Skills</h2>
-          <div class="container"><i class="devicon-javascript-plain "></i><i class="devicon-atom-original-wordmark "></i><i class="devicon-css3-plain-wordmark "></i><i class="devicon-git-plain-wordmark "></i><i class="devicon-github-plain-wordmark "></i><i class="devicon-html5-plain-wordmark "></i><i class="devicon-heroku-original-wordmark "></i><i class="devicon-mongodb-plain-wordmark "></i><i class="devicon-nodejs-plain-wordmark "></i><i class="devicon-postgresql-plain-wordmark"></i><i class="devicon-react-original-wordmark "></i><i class="devicon-sass-original"></i><i class="devicon-webpack-plain-wordmark "></i></div>
+          <div class="skills"><i class="devicon-javascript-plain "></i><i class="devicon-atom-original-wordmark "></i><i class="devicon-css3-plain-wordmark "></i><i class="devicon-git-plain-wordmark "></i><i class="devicon-github-plain-wordmark "></i><i class="devicon-html5-plain-wordmark "></i><i class="devicon-heroku-original-wordmark "></i><i class="devicon-mongodb-plain-wordmark "></i><i class="devicon-nodejs-plain-wordmark "></i><i class="devicon-postgresql-plain-wordmark"></i><i class="devicon-react-original-wordmark "></i><i class="devicon-sass-original"></i><i class="devicon-webpack-plain-wordmark "></i></div>
         </section>
 
         <section id="projects">
@@ -150,7 +150,7 @@
         <section id="contact">
           <h2>Contact Me</h2>
               <div>
-                Hi! Would you like to know more about me? Send me an email or message me on <a class="" href="https://www.linkedin.com/in/daniele-nocito-developer/">LinkedIn</a> I usually reply within 24 hours! I'm currently open to full-time and internship opportunities as a junior web developer.
+                Hi! Would you like to know more about me? Send me an email or message me on <a class="" href="https://www.linkedin.com/in/daniele-nocito-developer/" target="_blank">LinkedIn</a> I usually reply within 24 hours! I'm currently open to full-time and internship opportunities as a junior web developer.
               </div>
               <div>
                 <!-- <div class="aboutMeImage"></div> -->
@@ -160,12 +160,12 @@
                     <!-- <i class="fas fa-envelope" data-aos="fade-up" data-aos-duration="1750"></i> -->
                   </a>
                   <br>
-                  <a href="https://github.com/danielito76">
+                  <a href="https://github.com/danielito76" target="_blank">
                     github.com/danielito76
                     <!-- <i class="fab fa-linkedin-in" data-aos="fade-up" data-aos-duration="1750"></i> -->
                   </a>
                   <br>
-                  <a href="https://www.linkedin.com/in/daniele-nocito-developer/">
+                  <a href="https://www.linkedin.com/in/daniele-nocito-developer/" target="_blank">
                     linkedin.com/in/daniele-nocito-developer
                     <!-- <i class="fab fa-linkedin-in" data-aos="fade-up" data-aos-duration="1750"></i> -->
                   </a>
@@ -174,7 +174,7 @@
                 <br>
               </div>
               <div>
-                And please, do not forget to have a look at my Graphics works portfolio at <a class="" href="http://www.danielenocito.graphics">danielenocito.graphics</a>.
+                And please, do not forget to have a look at my Graphics works portfolio at <a class="" href="http://www.danielenocito.graphics" target="_blank">danielenocito.graphics</a>.
               </div>
         </section>
 
