No dot after the email

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <br>
               </div>
               <div>
-                And please, do not forget to have a look at my Graphics works portfolio at <a class="" href="http://www.danielenocito.graphics" target="_blank">danielenocito.graphics</a>.
+                And please, do not forget to have a look at my Graphics works portfolio at <a class="" href="http://www.danielenocito.graphics" target="_blank">danielenocito.graphics</a>
               </div>
         </section>
 
