Two more emendations

--- a/index.html
+++ b/index.html
@@ -223,17 +223,17 @@
 
               <div>
                   <a href="mailto:danielenocito76@gmail.com">
-                    <i class="fas fa-envelope" data-aos="fade-up" data-aos-duration="1750"></i>
-                    mailto: danielenocito76@gmail.com
+                    <i class="fas fa-envelope" data-aos="fade-up" data-aos-duration="1750"></i>&nbsp;&nbsp;
+                     mailto: danielenocito76@gmail.com
                   </a>
                   <br/>
                   <a href="https://github.com/danielito76" target="_blank">
-                    <i class="fab fa-github" data-aos="fade-up" data-aos-duration="1750"></i>
+                    <i class="fab fa-github" data-aos="fade-up" data-aos-duration="1750"></i>&nbsp;&nbsp;
                     github.com/danielito76
                   </a>
                   <br>
                   <a href="https://www.linkedin.com/in/daniele-nocito-developer/" target="_blank">
-                    <i class="fab fa-linkedin" data-aos="fade-up" data-aos-duration="1750"></i>
+                    <i class="fab fa-linkedin" data-aos="fade-up" data-aos-duration="1750"></i>&nbsp;&nbsp;
                     linkedin.com/in/daniele-nocito-developer
                   </a>
                   <br/>
@@ -242,7 +242,7 @@
                 And please, do not forget to have a look at my Graphics works portfolio at
                 <br/>
                 <a href="http://www.danielenocito.graphics" target="_blank">
-                  <i class="fas fa-globe" data-aos="fade-up" data-aos-duration="1750"></i>
+                  <i class="fas fa-globe" data-aos="fade-up" data-aos-duration="1750"></i>&nbsp;&nbsp;
                    danielenocito.graphics
                 </a>
               </div>
@@ -260,14 +260,14 @@
 
 
     <script>
-function myFunction() {
-  const x = document.getElementById("myTopnav")
-  if (x.className === "topnav") {
-    x.className += " responsive"
-  } else {
-    x.className = "topnav"
-  }
-}
-</script>
+      function myFunction() {
+        const x = document.getElementById("myTopnav")
+        if (x.className === "topnav") {
+          x.className += " responsive"
+        } else {
+          x.className = "topnav"
+        }
+      }
+    </script>
   </body>
 </html>
