Subtitle color corrected

--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
 
     <div class="container">
 
-      <!-- test intro -->
-      <!-- <div class="test" id="frogEats"><p id="dazzle">click me</p></div> -->
-      <!-- test intro -->
 
       <div class="sideContent">
         <div id="arrow_nav">
@@ -95,7 +92,7 @@
        <div class="content">
 
       <header>
-        <h2>Daniele Nocito <br/><span style="color:white;">web developer</span></h2>
+        <h2>Daniele Nocito <br/><span style="color: #a5a5a5;">web developer</span></h2>
 
         <div>
           <img id="logo" src="./img/logo.code.png" alt="logo">
