--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 
     <div class="container">
 
+      <!-- test intro -->
+      <!-- <div class="test1">
+        <h2 id="dazzle1">Daniele Nocito <br/><span style="color: grey;">web developer</span><br/><span style="color: white;">...........................</span></h2>
+      </div>
+      <div class="test2">
+        <img id="dazzle2" src="./img/logo.code.png" alt="logo">
+      </div> -->
+      <!-- test intro -->
 
       <div class="sideContent">
         <div id="arrow_nav">
@@ -89,15 +97,18 @@
 
 
 
-       <div class="content">
+      <main>
 
-      <header>
-        <h2>Daniele Nocito <br/><span style="color: #a5a5a5;">web developer</span></h2>
+         <header>
+           <h2>Daniele Nocito <br/><span style="color: grey;">web developer</span></h2>
+           <img id="logo" src="./img/logo.code.png" alt="logo">
+         </header>
 
-        <div>
+      <!-- <header>
+        <h2>Daniele Nocito <br/><span style="color: grey;">web developer</span></h2>
           <img id="logo" src="./img/logo.code.png" alt="logo">
-        </div>
-      </header>
+      </header> -->
+
 
 
 
@@ -245,10 +256,9 @@
               </div>
         </section>
 
-      </div> <!-- content -->
-      <footer>
-
-      </footer>
+        <footer>
+        </footer>
+      </main> <!-- main -->
       <div class="sideContent">
       </div>
     </div> <!-- container -->
