basic css animation implemented

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <main>
 
          <header>
-           <h2>Daniele Nocito <br/><span style="color: grey;">web developer</span></h2>
+           <h2 id="headerTitle">Daniele Nocito <br/><span style="color: grey;">web developer</span></h2>
            <img id="logo" src="./img/logo.code.png" alt="logo">
          </header>
 
